fixed textarea font and container alignment

--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-textarea {
-  font-family: inherit;
-  font-size: inherit;
+body {
+  background-color: rgb(221, 221, 199);
 }
 
 header {
@@ -17,14 +16,16 @@ header {
   background-color: rgb(238, 238, 213);
 }
 
-.form-input {
-  top: 10px;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, 25%);
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.form-input,
+.posts {
   width: 500px;
   color: black;
-  background-color: rgb(221, 221, 199);
   padding: 30px;
   margin-bottom: 15px;
 }
@@ -38,6 +39,8 @@ header {
   margin-bottom: 15px;
   width: 100%;
   padding: 5px;
+  font-size: inherit;
+  resize: none;
 }
 
 /* input boxes, change color on click*/
@@ -60,18 +63,6 @@ header {
 
 .form-input button:hover {
   background-color: brown;
-}
-
-.posts {
-  top: 450px;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, 15%);
-  width: 500px;
-  color: black;
-  background-color: rgb(221, 221, 199);
-  padding: 30px;
-  margin-bottom: 15px;
 }
 
 .single-post {
